# engram

./: .gitignore  CLAUDE.md  README.md  flake.nix
backend/: go.mod  go.sum  main.go
backend/internal/api/: download.go  files.go  health.go  router.go  upload.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/db/migrations/: 001_initial.down.sql  001_initial.up.sql
backend/internal/model/: file.go
backend/internal/queue/: rabbitmq.go
backend/internal/storage/: fs.go  s3.go  storage.go
docs/: architecture.md
infra/: minio.nix  postgres.nix  rabbitmq.nix
ingestion/: main.py  pyproject.toml
ingestion/worker/: db.py  extractors.py  handler.py  pipeline.py  storage.py  tagger.py
shells/: backend.nix  infra.nix  ingestion.nix
watcher/: go.mod  go.sum  main.go
watcher/internal/config/: config.go
watcher/internal/publisher/: rabbitmq.go
watcher/internal/watcher/: watcher.go
